opam-version: "2.0"
version: "dev"

homepage: "https://github.com/libtx/slot"
dev-repo: "git+https://github.com/libtx/slot.git"
license: "GPL-3"
maintainer: "noreply@example.com"
synopsis: "Collection of formal proofs about distributed systems"
description: """
"""

build: [
  [make "-j%{jobs}%" "validate"]
]
install: [make "install"]
depends: [
  "coq" {(>= "8.17" & < "8.18~") | (= "dev")}
  "coq-record-update"
  "coq-hammer"
  "coq-libtx-storage"
]

tags: [
  "keyword:program verification"
  "keyword:distributed algorithms"
]
authors: [
  "k32"
]
